@@ -208,36 +208,36 @@ class TestCleanupFilename(atcttestcase.ATCTSiteTestCase):
 tests.append(TestCleanupFilename)
 
 class TestATFileFunctional(atctftestcase.ATCTIntegrationTestCase):
-    
+
     portal_type = 'File'
     views = ('file_view', 'download', )
 
     def test_inlineMimetypes_Office(self):
         # Only PDF and Office docs are shown inline
         self.obj.setFormat('application/msword')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), None)
 
         self.obj.setFormat('application/x-msexcel')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), None)
 
         self.obj.setFormat('application/vnd.ms-excel')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), None)
 
         self.obj.setFormat('application/vnd.ms-powerpoint')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), None)
 
     def test_inlineMimetypes_PDF(self):
         # Only PDF and Office docs are shown inline
         self.obj.setFormat('application/pdf')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), None)
 
@@ -245,7 +245,7 @@ class TestATFileFunctional(atctftestcase.ATCTIntegrationTestCase):
         # Only PDF and Office docs are shown inline
         self.obj.setFilename('foo.txt')
         self.obj.setFormat('text/plain')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), 'attachment; filename="foo.txt"')
 
@@ -253,7 +253,7 @@ class TestATFileFunctional(atctftestcase.ATCTIntegrationTestCase):
         # Only PDF and Office docs are shown inline
         self.obj.setFilename('foo.exe')
         self.obj.setFormat('application/octet-stream')
-        response = self.publish(self.obj_path)
+        response = self.publish(self.obj_path, self.basic_auth)
         self.assertEqual(response.getStatus(), 200)
         self.assertEqual(response.getHeader('Content-Disposition'), 'attachment; filename="foo.exe"')
 
