@@ -3,9 +3,6 @@ from App.class_init import InitializeClass
 from App.Common import package_home
 from UserDict import UserDict
 import ExtensionClass
-from Acquisition import Implicit
-from ZPublisher.BeforeTraverse import registerBeforeTraverse
-from Persistence import Persistent
 import os
 
 PACKAGE_HOME = package_home(globals())
@@ -31,66 +28,6 @@ class FakeRequestSession(ExtensionClass.Base, UserDict):
 
 InitializeClass(FakeRequestSession)
 FakeRequestSession()
-
-class DummySessionDataManager(Implicit):
-    """Dummy sdm for sessioning
-    
-    Uses traversal hooks to add the SESSION object as lazy item to the request
-    """
-    security = ClassSecurityInfo()
-    security.setDefaultAccess('allow')
-    security.declareObjectPublic()
-    
-    id = 'session_data_manager'
-    
-    def __init__(self):
-        self.session = FakeRequestSession()
-        
-    def manage_afterAdd(self, item, container):
-        """Register traversal hooks to add SESSION to request
-        """
-        parent = self.aq_inner.aq_parent
-        hook = DummySDMTraverseHook()
-        registerBeforeTraverse(parent, hook, 'SessionDataManager', 50)
-
-    def getSessionData(self, create=1):
-        """ """
-        return self.session
-    
-    def hasSessionData(self):
-        """ """
-        return True
-    
-    def getSessionDataByKey(self, key):
-        """ """
-        return self.session
-    
-    def getBrowserIdManager(self):
-        """ """
-        # dummy
-        return self
-
-InitializeClass(DummySessionDataManager)
-
-class DummySDMTraverseHook(Persistent):
-    """Traversal hook for dummy sessions
-    
-    See Products.Sessions.SessionDataManager.SessionDataManagerTraverser
-    """
-    
-    def __call__(self, container, request):
-        id = DummySessionDataManager.id
-        sdm = getattr(container, id)
-        getSessionData = sdm.getSessionData
-        request.set_lazy('SESSION', getSessionData)
-
-def Xprint(s):
-    """print helper
-
-    print data via print is not possible, you have to use
-    ZopeTestCase._print or this function
-    """
-    ZopeTestCase._print(str(s)+'\n')
 
 from DateTime import DateTime
 def dcEdit(obj):
